concord_macros/tests/trybuild/fail/route/secret_in_path_atom.stderr
error: secret references are only allowed in credential declarations
  --> tests/trybuild/fail/route/secret_in_path_atom.rs:10:22
   |
10 |         path [secret.token]
   |                      ^^^^^
